Time filter commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Ma réu</string>
     <string name="filter">Filtres</string>
-    <string name="filter_option_1">Trier par date</string>
-    <string name="filter_option_2">Trier par lieu</string>
+    <string name="filter_option_1">Filtrer par date</string>
+    <string name="filter_option_2">Filtrer par lieu</string>
     <string name="filter_reset">Réinitialiser les filtres</string>
     <string-array name="rooms">
         <item>Réunion A</item>
